*SVN*

* Fixed that script/generate would not look for plugin generators in plugin_paths #11000 [glv]

* Fix database rake tasks to work with charset/collation and show proper error messages on failure. Closes #11301 [matt]

* add a -e/--export to script/plugin install, uses svn export. #10847 [jon@blankpad.net)]

* Add config.time_zone for configuring the default Time.zone value.  #10982 [Geoff Buesing]

* Reshuffle load order so that routes and observers are initialized after plugins and app initializers.  Closes #10980 [rick]

* Git support for script/generate.  #10690 [ssoroka]

* Update scaffold to use labels instead of bold tags.  Closes #10757 [zach-inglis-lt3]

* Resurrect WordNet synonym lookups.  #10710 [tom./, matt]

* Added config.cache_store to environment options to control the default cache store (default is FileStore if tmp/cache is present, otherwise MemoryStore is used) [DHH]

* Added that rails:update is run when you do rails:freeze:edge to ensure you also get the latest JS and config files #10565 [jeff]

* SQLite: db:drop:all doesn't fail silently if the database is already open.  #10577 [Cheah Chu Yeow, mrichman]

* Introduce native mongrel handler and push mutex into dispatcher.  [Jeremy Kemper]

* Ruby 1.9 compatibility.  #1689, #10546 [Cheah Chu Yeow, frederico]


*2.0.2* (December 16th, 2007)

* Changed the default database from mysql to sqlite3, so now running "rails myapp" will have a config/database.yml that's setup for SQLite3 (which in OS X Leopard is installed by default, so is the gem, so everything Just Works with no database configuration at all). To get a Rails application preconfigured for MySQL, just run "rails -d mysql myapp" [DHH]

* Turned on ActionView::Base.cache_template_loading by default in config/environments/production.rb to prevent file system stat calls for every template loading to see if it changed (this means that you have to restart the application to see template changes in production mode) [DHH]
